Added Facebook Passport

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
+HOSTNAME=http://localhost:3000
 SESSION_SECRET=ASDFGHJ
 MONGO_CONNECT=mongodb+srv://root:1234@mycluster.sr4nd.mongodb.net/test?retryWrites=true&w=majority
+
+FACEBOOK_APPID=1003088540488979
+FACEBOOK_SECRET=908af80eb9dc255aa0796fd454a23c09
