--- a/.env
+++ b/.env
@@ -2,5 +2,8 @@ HOSTNAME=http://localhost:3000
 SESSION_SECRET=ASDFGHJ
 MONGO_CONNECT=mongodb+srv://root:1234@mycluster.sr4nd.mongodb.net/test?retryWrites=true&w=majority
 
-FACEBOOK_APPID=1003088540488979
+FACEBOOK_CLIENTID=1003088540488979
 FACEBOOK_SECRET=908af80eb9dc255aa0796fd454a23c09
+
+GOOGLE_CLIENTID=156691773247-qpaeiunltr68dlt3qgpg79pguim4m6g4.apps.googleusercontent.com
+GOOGLE_SECRET=DIlDuMGtkDxZXaH2YUaFQHNM
